test/functions/return-type-class-hierarchy/unmanaged-child1-unmanaged-child2.2.good
unmanaged-child1-unmanaged-child2.chpl:5: error: unable to resolve return type
